# Number-Factorer

./: .gitignore  Factor_Number.py  README.md  benchmarking.ipynb  messing_around.ipynb  pyproject.toml  test.py
Classical_Factoring/: ekera_factorizer.py  oneshot_full_factorizer.py  shor_factorizer.py  shor_full_factorizer.py
Classical_Factoring/classical_shor_auxillaries/: is_power.py  power_of_two.py  refine.py  splitter.py
Classical_Factoring/ekera_aux/: factor_list_helpers.py
Classical_Factoring/one_shot_auxillaries/: adding_factors.py  factor_list_helpers.py  is_complete_factor.py  largest_exponent.py  power_refine.py  random_invertible.py
Classical_Factoring/shor_aux/: is_power.py  refine.py  splitter.py
Failed_Experiments/Classical_Factoring/: failed_order.py
Order_Finding/Classical/: babygiantsteps.py  bad_order_finder.py  random_order_finder.py
Order_Finding/Quantum/: beauregard_circuit.py  one_control.py  original_shor.py  quantum_order_finder.py  shor_circuit.py
Order_Finding/Quantum/quantum_aux/: continued_fractions.py  mod_multiply.py
Order_Finding/Quantum/quantum_shor_aux/: QFT.py  semi_classical_modular_adder.py
Order_Finding/Quantum/quantum_shor_auxillaries/: continued_fractions.py  mod_multiply.py  semi_classical_adder.py  (+1 more)
docs/: REFERENCES.md  TECHNICAL.md  USER_GUIDE.md
number_factorer/: Factor_Number.py  __init__.py
number_factorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
number_factorer/Classical_Factoring/: ekera_factorizer.py  shor_factorizer.py
src/number_factorer/: Factor_Number.py
(+12 files in other folders)
