[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["number_factorer"]
exclude = ["images"]

[project]
name = "number-factorer"
version = "0.1.0"
description = "Classical and quantum integer factoring algorithms."
authors = [
    { name="Ethan Ross" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "gmpy2",
    "numpy",
    "qiskit",
]

[project.urls]
Homepage = "https://github.com/EthanRossmath/Number-Factorer"
